# TDD

Chatter/: .gitignore  Chatter.sln  Makefile  run_two_chatters.bat  run_two_chatters.sh
Chatter/Chatter/: Chatter.h  Chatter.vcxproj  Chatter.vcxproj.filters  Tokeniser.h  transport.h  wxChatterApp.cpp
Chatter/Chatter/Debug/Chatter.tlog/: Chatter.lastbuildstate
Chatter/ChatterTests/: .gitignore  ChatterTests.vcxproj  ChatterTests.vcxproj.filters  Makefile  Tokeniser.h  main.cpp  transport.h
string_calculator_kata/: CMakeLists.txt  string_calculator_kata.cc
string_calculator_kata/src/: string_calculator_kata.cc
